--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,5 @@
 {% load static %}
 
-
-
 <header class="site-navbar mt-3">
   <div class="container-fluid">
     <div class="row align-items-center">
@@ -13,30 +11,31 @@
           <li><a href="{% url 'jobs:job-listing' %}">Job Listings</a></li>
           <li><a href="{% url 'jobs:about' %}">About</a></li>
           <li><a href="{% url 'jobs:contact' %}">Contact</a></li>
-             <li><a href="{% url 'jobs:service' %}"> Services</a></li>
+          <li><a href="{% url 'jobs:service' %}"> Services</a></li>
 
 
           <li class="d-lg-none"><a href="#">Contact Us</a></li>
         </ul>
       </nav>
-{% if user.is_authenticated %}
+      {% if user.is_authenticated %}
       <div class="right-cta-menu text-right d-flex aligin-items-center col-6">
         <div class="ml-auto">
 
 
           <ul class="nav nav-tabs">
 
-  <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="True" aria-expanded="false">
-      {{request.user.first_name}} {{request.user.last_name}}</a>
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="True"
+                aria-expanded="false">
+                {{request.user.first_name}} {{request.user.last_name}}</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
 
-    </div>
-  </li>
+              </div>
+            </li>
 
 
-</ul>
+          </ul>
 
 
 
@@ -46,7 +45,7 @@
 
 
 
-{% endif %}
+      {% endif %}
     </div>
   </div>
-    </header>
+</header>
