--- a/templates/accounts/employee_signup.html
+++ b/templates/accounts/employee_signup.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
-{% load bootstrap %}
+{% load crispy_forms_tags %}
+
 {% load static %}
 
 {% block content %}
@@ -32,7 +33,7 @@
                 <div class="col-lg-6 mb-5 mb-lg-0">
                     <form action="/accounts/signup/" method="POST">{% csrf_token %}
 
-                        {{ form|bootstrap }}
+                        {{ form|crispy }}
 
                         <div class="row form-group">
                             <div class="col-md-12">
