--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 
-{% load bootstrap %}
-
+{% load crispy_forms_tags %}
 
 {% block content %}
     <section class="home-section section-hero inner-page overlay bg-image"
@@ -29,7 +28,7 @@
                     <p>Already have your account?</p>
                     <form action="" method="POST">{% csrf_token %}
 
-                        {{ form|bootstrap }}
+                        {{ form|crispy }}
 
                         <div class="row form-group">
                             <div class="col-md-12">
