--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -2,9 +2,11 @@
 
 {% load crispy_forms_tags %}
 
+{% load static %}
+
 {% block content %}
     <section class="home-section section-hero inner-page overlay bg-image"
-             style="background-image: url('images/hero_1.jpg');" id="home-section">
+             style="background-image: url('{% static 'images/hero_1.jpg' %}');" id="home-section">
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-12">
