--- a/templates/jobs/contact.html
+++ b/templates/jobs/contact.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
+
 {% load static %}
-{% load bootstrap %}
+
+{% load crispy_forms_tags %}
 
 
 {% block content %}
@@ -25,7 +27,7 @@
                 <div class="col-lg-6 mb-5 mb-lg-0">
                     <form action="/jobs/contact/" method="POST">{% csrf_token %}
 
-                        {{ form|bootstrap }}
+                        {{ form|crispy }}
 
                         <div class="row form-group">
                             <div class="col-md-12">
