--- a/templates/jobs/contact.html
+++ b/templates/jobs/contact.html
@@ -41,13 +41,13 @@
                 <div class="col-lg-5 ml-auto">
                     <div class="p-4 mb-3 bg-white">
                         <p class="mb-0 font-weight-bold">Address</p>
-                        <p class="mb-4">33/7, Block D, Mirpur, Dhaka, Bangladesh</p>
+                        <p class="mb-4">91/4, Tollabag, Farmgate, Dhaka, Bangladesh</p>
 
                         <p class="mb-0 font-weight-bold">Phone</p>
-                        <p class="mb-4"><a href="#">+88 01798128799</a></p>
+                        <p class="mb-4"><a href="#">+88 01771844336</a></p>
 
                         <p class="mb-0 font-weight-bold">Email Address</p>
-                        <p class="mb-0"><a href="#">nazmul199512@gmail.com</a></p>
+                        <p class="mb-0"><a href="#">iamomar022@gmail.com</a></p>
 
                     </div>
                 </div>
