--- a/templates/jobs/job_post.html
+++ b/templates/jobs/job_post.html
@@ -1,8 +1,27 @@
 {% extends 'base.html' %}
 
-{% load bootstrap %}
+{% load crispy_forms_tags %}
+
+{% load static %}
 
 {% block content %}
+
+    <section class="home-section section-hero inner-page overlay bg-image"
+             style="background-image: url('{% static 'images/hero_1.jpg' %}');" id="home-section">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-12">
+                    <div class="mb-5 text-center">
+
+                        <h2 class="text-white font-weight-bold">Post A Job</h2>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section class="site-section" id="next-section">
         <div class="container">
@@ -12,7 +31,7 @@
                     <center><h1 class="lead">Post a Job</h1></center>
                     <form action="" method="POST" class="">{% csrf_token %}
 
-                        {{ form|bootstrap }}
+                        {{ form|crispy }}
 
                         <div class="row form-group">
                             <div class="col-md-12">
