--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,7 @@
           <ul class="nav nav-tabs">
 
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="True"
+              <a class="nav-link dropdown-toggle btn btn-secondary" data-toggle="dropdown" href="#" role="button" aria-haspopup="True"
                 aria-expanded="false">
                 {{request.user.first_name}} {{request.user.last_name}}</a>
               <div class="dropdown-menu">
@@ -36,8 +36,6 @@
 
 
           </ul>
-
-
 
 
         </div>
