--- a/templates/jobs/job_apply.html
+++ b/templates/jobs/job_apply.html
@@ -1,8 +1,26 @@
 {% extends 'base.html' %}
 
-{% load bootstrap %}
+{% load crispy_forms_tags %}
+
+{% load static %}
 
 {% block content %}
+
+    <section class="home-section section-hero inner-page overlay bg-image"
+             style="background-image: url('{% static 'images/hero_1.jpg' %}');"
+             id="home-section">
+
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-12">
+                    <div class="mb-5 text-center">
+                        <h1 class="text-white font-weight-bold">Apply For The Job</h1>
+                        <p>Find your dream jobs in our powerful career website.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="site-section" id="next-section">
         <div class="container">
@@ -10,10 +28,10 @@
 
             <div class="row justify-content-center">
                 <div class="col-lg-6 mb-5 mb-lg-0">
-                    <center><h1 class="lead">Apply for job </h1></center>
+                    <center><h1 class="lead">Apply For Job </h1></center>
                     <form action="" method="POST" class="" enctype="multipart/form-data">{% csrf_token %}
 
-                        {{ form|bootstrap }}
+                        {{ form|crispy }}
 
                         <div class="row form-group">
                             <div class="col-md-12">
