--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
 
 
             <div class="container">
-                <div class="row mb-5">
+                <div class="row mb-5" style="margin-bottom: -10px!important;">
                     <div class="col-6 col-md-3 mb-4 mb-md-0">
                         <h3>Search Trending</h3>
                         <ul class="list-unstyled">
@@ -88,7 +88,7 @@
 
                 <div class="row text-center">
                     <div class="col-12">
-                        <p>
+                        <p style="margin-bottom: -10px!important;">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             Copyright &copy;
                             <script>document.write(new Date().getFullYear());</script>
