--- a/templates/home.html
+++ b/templates/home.html
@@ -159,7 +159,7 @@
                 <img class="img-fluid mx-auto" src="{% static 'images/person_1.jpg' %}" alt="Image">
                 <blockquote>
                   <p>&ldquo;Soluta quasi cum delectus eum facilis recusandae nesciunt molestias accusantium libero dolores repellat id in dolorem laborum ad modi qui at quas dolorum voluptatem voluptatum repudiandae.&rdquo;</p>
-                  <p><cite> &mdash; Richard Anderson</cite></p>
+                  <p><cite> &mdash; Md. Omar Faruk</cite></p>
                 </blockquote>
               </div>
             </div>
@@ -171,7 +171,7 @@
                 <img class="img-fluid mx-auto" src="{% static 'images/person_2.jpg' %}" alt="Image">
                 <blockquote>
                   <p>&ldquo;Soluta quasi cum delectus eum facilis recusandae nesciunt molestias accusantium libero dolores repellat id in dolorem laborum ad modi qui at quas dolorum voluptatem voluptatum repudiandae.&rdquo;</p>
-                  <p><cite> &mdash; Chris Peters</cite></p>
+                  <p><cite> &mdash; Md. Omar Faruk</cite></p>
                 </blockquote>
               </div>
             </div>
