--- a/templates/jobs/about_us.html
+++ b/templates/jobs/about_us.html
@@ -75,7 +75,7 @@
           style="height: 400px; width: 400px;">
 
 
-        <h3>Drew Anderson</h3>
+        <h3>Md. Omar Faruk</h3>
         <p class="text-muted">Creative Director</p>
         <p>Soluta quasi cum delectus eum facilis recusandae nesciunt molestias accusantium libero dolores repellat id in
           dolorem laborum ad modi qui at quas dolorum voluptatem voluptatum repudiandae voluptatibus ut? Ex vel ad
